inference-service/llmd-inference-simulator/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inference-simulator-maas
  namespace: maas
spec:
  replicas: 1
  selector:
    matchLabels:
      app: inference-simulator-maas
  template:
    metadata:
      labels:
        app: inference-simulator-maas
    spec:
      containers:
      - name: llm-d-container
        image: quay.io/jbarea/llm-d-inference-sim:v0.1.0
        args:
          - "--port"
          - "8080"
          - "--model"
          - "inference-simulator-maas"
          - "--mode"
          - "echo"
        ports:
        - containerPort: 8080
